# libzapojit

./: Makefile  README.md  libzapojit.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  zapojit-0.0.pc.in
src/docs/: Makefile.in
src/docs/reference/: Makefile.am  Makefile.in  libzapojit-0.0-docs.sgml  libzapojit-0.0-sections.txt  libzapojit-0.0.types
src/docs/reference/html/: ZpjGoaAuthorizer.html  ZpjSkydrive.html  ZpjSkydriveEntry.html  ZpjSkydriveFile.html  ZpjSkydriveFolder.html  ZpjSkydrivePhoto.html  annotation-glossary.html  authorization.html  index.html  index.sgml  ix01.html  libzapojit-0.0-ZpjAuthorizer.html  libzapojit-0.0.devhelp2  skydrive.html
src/po/: POTFILES.in
src/src/: Makefile.am  Makefile.in  zpj-authorization-domain.c  zpj-authorization-domain.h  zpj-authorizer.c  zpj-authorizer.h  zpj-enums.c  zpj-enums.c.template  zpj-enums.h  zpj-enums.h.template  zpj-goa-authorizer.c  zpj-goa-authorizer.h  zpj-skydrive-entry.c  zpj-skydrive-entry.h  zpj-skydrive-file.c  zpj-skydrive-file.h  zpj-skydrive-folder.c  zpj-skydrive-folder.h  zpj-skydrive-photo.c  zpj-skydrive-photo.h  zpj-skydrive.c  zpj-skydrive.h  zpj.h
