AC_INIT([Zapojit],
        [0.0.3],
        [https://bugzilla.gnome.org/enter_bug.cgi?product=libzapojit],
        [libzapojit],
        [])
AC_PREREQ(2.63)

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AM_INIT_AUTOMAKE([-Wno-portability])
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CC_C_O
AC_HEADER_STDC

GLIB_MIN_VERSION=2.28
SOUP_MIN_VERSION=2.38

GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS([maximum])
GNOME_DEBUG_CHECK
GNOME_MAINTAINER_MODE_DEFINES

GOBJECT_INTROSPECTION_CHECK([1.30.0])

IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=AC_PACKAGE_TARNAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"],
                   [GETTEXT package name])
AM_GLIB_GNU_GETTEXT

LT_INIT

GTK_DOC_CHECK([1.11],[--flavour no-tmpl])

PKG_CHECK_MODULES(GLIB, [glib-2.0 >= $GLIB_MIN_VERSION])
PKG_CHECK_MODULES(GIO, [gio-2.0])
PKG_CHECK_MODULES(JSON, [json-glib-1.0])
PKG_CHECK_MODULES(REST, [rest-0.7])

PKG_CHECK_MODULES(SOUP, [libsoup-2.4 >= $SOUP_MIN_VERSION])
SOUP_UNSTABLE_CPPFLAGS=-DLIBSOUP_USE_UNSTABLE_REQUEST_API
AC_SUBST(SOUP_UNSTABLE_CPPFLAGS)

PKG_CHECK_MODULES(GOA, [goa-1.0])
GOA_API_CHANGE_CPPFLAGS=-DGOA_API_IS_SUBJECT_TO_CHANGE
AC_SUBST(GOA_API_CHANGE_CPPFLAGS)

AC_CONFIG_FILES([
zapojit-0.0.pc
Makefile
docs/Makefile
docs/reference/Makefile
docs/reference/version.xml
src/Makefile
po/Makefile.in
])
AC_OUTPUT
